2022-10-29  Morten Welinder  <terra@gnome.org>

	* src/sheet-conditions.c (update_group): Fix problem during sheet
	finalize.

	* src/sheet.c (sheet_destroy_contents): Set cell_hash to NULL
	after we free it for easier debug.

2022-10-08  Morten Welinder  <terra@gnome.org>

	* src/libgnumeric.c (gnm_pre_parse_init): Use basename of argv[0],
	except when help is requested.  See #677 for details.

2022-09-17  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-09-17  Morten Welinder <terra@gnome.org>

	* Release 1.12.53

2022-08-29  Morten Welinder  <terra@gnome.org>

	* src/value.c (value_new_float): Avoid -0.

2022-08-24  Morten Welinder  <terra@gnome.org>

	* src/gui-util.c (gnm_keyed_dialog): Simplify signal handling.
	Fixes #657, I hope.

2022-08-17  Morten Welinder  <terra@gnome.org>

	* src/gutils.c (gnm_utf8_strto): Handle near-denormal case.

2022-06-06  Morten Welinder  <terra@gnome.org>

	* src/complex.c (gnm_complex_to_string): Use go_dtoa as building
	block.  Ensure uppercase "E" in exponential forms.

2022-05-05  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-read.c (xml_cell_set_array_expr): Fix inter-process
	array non-corner element problem.  [Part of #634]

2022-04-18  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-04-18  Morten Welinder <terra@gnome.org>

	* Release 1.12.52

2022-04-03  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (cb_max_cell_width): Be less aggressive in column
	widening.  #621.

2022-03-16  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (gnm_sheet_constructed): When rescaling row height
	due to font size, also increase column width.

2022-03-06  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-write.c (xml_write_colrow_info): Fix last fix.  I
	accidentally made the run-length encoding break off too early.

2022-03-02  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-write.c (xml_write_colrow_info): Fix problem writing